assets/css/style.css
:root{
    --primary-color: rgb(92, 81, 66);
    --secondary-color: rgb(211, 203, 197);
    --hover-color: rgb(151, 160, 173);
}
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

html{
    scroll-behavior: smooth; /*makes all scrolling smooth*/
}

body {
    
    font-family: 'Lucida Sans', Arial, sans-serif;
}

#profile-pic-title{ /*this element is to only be seen on smaller screen sizes*/
    visibility: hidden;
    height:0px;
}
header {
    overflow: hidden;
    display: flex;
    margin-left:13vw;
    height: 70vh;
    justify-content: space-between;
    flex-wrap: wrap;
    background-image: url("../images/blurry-bg.jpg");
    background-size: cover;
    background-attachment: fixed;
    border-bottom: 0.2vw solid var(--primary-color);

}
#title {
    margin-top: 20vh;
    flex: 0 100%;
    display: block;
    text-align: center;
}
#title h1{
    color:var(--secondary-color);
    text-decoration: underline;
    font-size: 70px;
}    

#title h2{
    color:var(--secondary-color);
    font-size: 40px;
}    


/*by setting margins reletive to the viewport, the items will saty stationary on screen*/
header nav {
    display:inline-flex;
    flex-direction: column;
    order:1;
    text-align: center;
    font-size: 2vw;
    position: fixed;
    width: 13vw;
    height: 100%;
    top: 0;
    left: 0;
    /* background-image: linear-gradient( rgb(247, 228, 204), rgb(87, 73, 51)); */
    background-image: url("../images/blurry-bg.jpg");
    background-size: cover;
    background-attachment: fixed;
    
    z-index: 9999;
}

header nav a{
    display: inline-block; /*set from flex child to block so margins can be set for spacing*/
    color: rgb(48, 48, 48);
    margin-top: 8vh;
    text-decoration: none;
    background-color: var(--secondary-color);
    border-radius: 20px;
    border-top: .5vh solid var(--primary-color);
    border-bottom: .5vh solid var(--primary-color); 
}

header nav a:hover{
    background-color: var(--hover-color);
}

header nav img{
    margin-top: 1vh;
    border-radius: 45%;
    max-height: 13vw ;
    max-width: 13vw;
}

/* END HEADER/NAV */

/*BEGIN ABOUT ME SECTION*/
#about{
    background-color:snow;
    padding-bottom: 20px;
    border: 0.2vw solid var(--primary-color);
    text-align: center;
    margin-left:13vw;
}
#about h2{
    color:var(--primary-color);
    font-size: 40px; /*this should be 30 but for somew reason it doesnt stay the right size*/
}

/*BEGIN WORKS SECTION*/
#work {
    color:var(--primary-color);
    background-color:snow;
    font-size: 30px;
    border: 0.2vw solid var(--primary-color);
    text-align: center;
    margin-left:13vw;
}
/*children*/

#works{
    display: flex;
    flex-wrap: wrap;

}

#works a{
    text-decoration: none;
    text-align: left;
}
                                    /*MORCAL---------*/
#morcal {
    color: var(--primary-color);
    flex: 1 100%;
    height: 350px;
    border-top: 3px solid var(--primary-color);
    border-bottom: 3px solid var(--primary-color);
    background-position: center;
    background-size: cover;
    background-image: url(../images/MORCAL.jpg);
}
#morcal:hover {
    font-weight: bold;
}
                                    /*runbuddy---------*/
#runbuddy {
    color: var(--primary-color);
    flex:1 50%;
    height: 350px;
    border-top: 3px solid var(--primary-color);
    border-bottom: 3px solid var(--primary-color);
    background-position: right;
    background-size:cover;
    background-image: url(../images/runbuddy.jpg);
}
#runbuddy:hover {
    font-weight: bold;
}
                                    /*breakout---------*/
#breakout {
    color: var(--primary-color);
    flex: 1 50%;
    height: 350px;
    border-top: 3px solid var(--primary-color);
    border-bottom: 3px solid var(--primary-color);
    background-position: center;
    background-size: 100%;
    background-repeat: no-repeat;
    background-image: url(../images/breakout.jpg);
}
#breakout:hover {
    font-weight: bold;
}
/*BEGIN FOOTER SECTION*/
footer {
    color:var(--primary-color);
    background-color:snow;
    list-style: none;
    font-size: 30px;
    border: 0.2vw solid var(--primary-color);
    text-align: center;
    margin-left:13vw;
}
footer h2{

    border-bottom: 8px solid var(--secondary-color);
}



 /* ----------Media Queries SMALL DESKTOP screens 980px breakpoint---------- */
 @media screen and (max-width: 980px)
 {
     header, #about, #work, #contact {
         margin-left: 0px;
     }

     #about, #work, #contact {
        scroll-margin-top: 45px;
    }

     #title{
        margin-top: 10vh;
     }

     #profile-pic{
        order:5;
        visibility: hidden;
    }

    #profile-pic-title{
        padding-top: 1px;
        visibility: visible;
        border-radius: 50%;
        height:20vh;
    }
    
    header nav {
        display:flex;
        flex-wrap: wrap;
        flex-direction: row;
        width: 100vw;
        height: 45px;
    }

    header nav a{
        flex:1 25%;
        height: 5vh;
        width: 21vw;
        margin-top:5px;
        font-size: 3vh;
        margin-left: auto;
        margin-bottom: auto;
    }


 }

 /* -----Media Queries TABLET screens----- */

@media screen and (max-width: 768px) {

    header nav a{
        text-align: center;
        width: 150px;
        height: 30px;
        font-size: 3vh;
 
    }

}

/* -----Media Queries PHONE screens----- */
@media screen and (max-width: 575px){
    
    header nav{
        height:73px;
    }
    #about, #work, #contact {
        scroll-margin-top: 73px;
    }
    #title{
        margin-top: 13vh;
     }

    #title h1{
        font-size: 35px;
    }

    #title h2{
        font-size: 20px;
    }

    header nav a{
        flex:1 50%;
 
 
    }
    #morcal{
        height: 200px;
    }
    #runbuddy, #breakout{

        height: 150px;
    }
}

